TbaMUD is currently being developed by The Builder Academy. If you need any
help, find any bugs, or have ideas for improvement please stop by TBA at 
telnet://tbamud.com:9091 or email rumble@tbamud.com --Rumble
 
tbaMUD 3.56
[Jul 03 2008] - Rumble
  Fixed lib/messages to properly display skill, spell, and damage messages. (thanks Tink)
[Jun 28 2008] - Rumble
  Added player ability to cancel queued commands. i.e. player spammed kick while fighting but needs to flee so they type '--' to cancel so they can flee. (thanks Jamdog)
[Jun 28 2008] - Fizban
  Merged Jamdog's moblist code into the pre-existing mlist command. (thanks Jamdog)
[Jun 14 2008] - Rumble
  Made immortals immune to blinding.
  Fixed bug in qedit where quest completion would try to load an object with vnum NOTHING. (thanks Jamdog)
  Fixed log when builder tries to edit a zone without permission.
[Jun 12 2008] - Rumble
  Fixed toggle quest to toggle correctly.
  Fixed bug in dg find_replacement to call text_processed at the beginning, regardless of whether something matching the variable is found or not. (thanks Laoris)
  Fixed log error that was using rnum instead of vnum. (thanks Jamdog)
[Jun 11 2008] - Rumble
  Added notification via prompt for new MOTD and news entries. (thanks Jamdog)
  Added all option to the restore command. (thanks Jamdog)
  Added new trigger variable hasattached. (thanks Fizban)
[Jun 10 2008] - Rumble
  Added spec proc type under stat. (thanks Jamdog)
  Only allow immortals to talk while invis and be displayed as "someone." (thanks Frenze)
[May 27 2008] - Rumble
  Fixed list_obj_to_char from only checking invisibility on first object of the same vnum. (thanks Laoris)
  Added object stacking when looking at a character's inventory. (thanks Jamdog)
[May 22 2008] - Rumble
  Added zone name to where command. (thanks Jamdog)
[May 21 2008] - Rumble
  Rewrite of void script_vlog to prevent possible crash bug on some OS's. (thanks Jamdog)
[May 17 2008] - Rumble